[package]
name = "jr"
version = "0.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
sysinfo = "0.33.1"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0.136"
tempfile = "3.4.0"

[dev-dependencies]
httptest = "0.16.3"
